tests/negative/regression/r39.orng
fn main() -> Int { 
    let const a: Int = match { } { 4 => 5 }
    a
} 
